docs for store()
